# hASTkell

./: .gitignore  LICENSE  README.md  hASTkell.cabal  hastkell.cabal
source/: Core.hs  Evaluator.hs  PentaParser.hs  Preprocess.hs  QuadParser.hs  main.hs
source/Solver/: System.hs
source/Types/: Matrix.hs  Operator.hs  Tree.hs
tests/: Syntax.hs  TestMatrix.hs  TestPreprocess.hs  test.hs
