cabal-version:      3.0
name:               hastkell
version:            0.1.0.0

homepage:           https://github.com/Sup2point0/hASTkell
license:            MIT
license-file:       LICENSE
author:             Sup#2.0

category:           Math
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:    Core, Preprocess, Evaluator, PentaParser
    -- other-extensions:

    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   source
    default-language: Haskell2010

test-suite hastkell-tests
    build-depends:    hastkell, base ^>=4.18.3.0, tasty, tasty-hunit >=0.9
    hs-source-dirs:   tests
    main-is:          test.hs
    other-modules:    Syntax, TestPreprocess
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
